cleaning up ico files and stuff

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,7 +35,7 @@ permalink: /contact
   </li>
   <li>
     <img
-      src="/assets/icons/mastodon.png"
+      src="/assets/icons/mastodon.svg"
       width="16"
       height="16"
       alt=""
@@ -52,7 +52,7 @@ permalink: /contact
   <b>I'm on here too</b>
   <li>
     <img
-      src="/assets/icons/discord.png"
+      src="/assets/icons/discord.svg"
       width="16"
       height="16"
       alt=""
@@ -62,7 +62,7 @@ permalink: /contact
   </li>
   <li>
     <img
-      src="/assets/icons/github.png"
+      src="/assets/icons/github.svg"
       width="16"
       height="16"
       alt=""
@@ -83,7 +83,7 @@ permalink: /contact
   </li>
   <li>
     <img
-      src="/assets/icons/twitter.png"
+      src="/assets/icons/twitter.svg"
       width="16"
       height="16"
       alt=""
@@ -126,7 +126,7 @@ permalink: /contact
   </li>
   <li>
     <img
-      src="/assets/icons/twitch.png"
+      src="/assets/icons/twitch.svg"
       width="16"
       height="16"
       alt=""
@@ -136,7 +136,7 @@ permalink: /contact
   </li>
   <li>
     <img
-      src="/assets/icons/youtube.png"
+      src="/assets/icons/youtube.svg"
       width="16"
       height="16"
       alt=""
@@ -153,12 +153,12 @@ permalink: /contact
 
 <h2>Button</h2>
 
-<p>Oh, by the way I do have a cool 88x31 button you can add to your site :D It's a scene I created in the old Roblox                                                                        
+<p>Oh, by the way I do have a cool 88x31 button you can add to your site :D It's a scene I created in the old Roblox                                                                                 
     engine, so I regularly swap out the background to different classic maps.</p>
 
 <a href="/"><img src="/realjame.gif"></a>
 
-<p>Because of the auto-updating, I'd like you to link the image source directly to my website, so when I update, it'll                                                                        
+<p>Because of the auto-updating, I'd like you to link the image source directly to my website, so when I update, it'll                                                                                 
     update on every site that uses it! Don't worry, I have Cloudflare and caching and stuff, it won't hurt. And of
     course, you don't have to.</p>
 
@@ -251,27 +251,27 @@ permalink: /contact
 
 <p>Shoutout to this article by
   <a href="https://justinjackson.ca">Justin Jackson</a>:
-  <a href="https://justinjackson.ca/webmaster/">"I'm a fucking webmaster"</a>. This article is the reason I label                                                                        
+  <a href="https://justinjackson.ca/webmaster/">"I'm a fucking webmaster"</a>. This article is the reason I label                                                                                 
     myself a "webmaster" on Mastodon/Twitter, lol. It's a cool title!
 </p>
 
 <p>Shoutout to Kugee from
   <a href="https://razorback95.com">Razorback</a>
-  - nothing specific, just probably my favorite website on the internet in its passion, creativity, motivation, and                                                                        
+  - nothing specific, just probably my favorite website on the internet in its passion, creativity, motivation, and                                                                                 
     unique focus, as well as the services it provides. It is the ultimate "personal website", and I love it for that.
   <a href="http://razorback95.com"><img src="/assets/buttons/razorback95.gif" alt="Razorback"></a>
 </p>
 
 <p>Big shoutout to
-  <a href="https://landchad.net">LandChad.net</a>. It's what pushed me to create a website in 2021, and was my                                                                        
+  <a href="https://landchad.net">LandChad.net</a>. It's what pushed me to create a website in 2021, and was my                                                                                 
     introduction to working with Linux servers and making websites.
-  <small>Although I also set up an e-mail server using the guide and I learned how painful it is to maintain that. I                                                                        
+  <small>Although I also set up an e-mail server using the guide and I learned how painful it is to maintain that. I                                                                                 
         guess that was a learning experience...?</small>
   <a href="https://landchad.net"><img src="/assets/buttons/landchad.gif" alt="Get a website - LandChad.net"></a>
 </p>
 
 <p>Shoutout to
-  <a href="https://simonwillison.net">Simon Willison's website - simonwillison.net</a>, I love the minimalism design                                                                        
+  <a href="https://simonwillison.net">Simon Willison's website - simonwillison.net</a>, I love the minimalism design                                                                                 
     with the "tasteful" use of purple. But more specifically, his
   <a href="https://til.simonwillison.net">"TILs"</a>
   section is what inspired the Daily Notes on my site.
@@ -281,7 +281,7 @@ permalink: /contact
   <a href="https://zencorner.xyz">Zenith</a>
   and
   <a href="https://ashiecorner.xyz">Ashie</a>
-  for making an EXTREMELY PRETTY looking website design, with the colors, gradients, shadows, and layout. It's all so                                                                        
+  for making an EXTREMELY PRETTY looking website design, with the colors, gradients, shadows, and layout. It's all so                                                                                 
     good, I had to steal it! It was (blatantly) my biggest inspiration in this redesign.
   <a href="https://ashiecorner.xyz"><img src="/assets/buttons/ashiecorner.gif" alt="ashiecorner"></a>
   <a href="https://zencorner.xyz"><img src="/assets/buttons/zencorner.gif" alt="zencorner"></a>
@@ -290,7 +290,7 @@ permalink: /contact
 <p>I'd also like to give
   <a href="https://nick64.me">Nick64</a>
   <i>the most special thanks</i>
-  for being a very good friend of mine and motivating me to keep improving my website and being active on it, as he is                                                                        
+  for being a very good friend of mine and motivating me to keep improving my website and being active on it, as he is                                                                                 
     always doing with his. He posts far, FAR more than I do and has a beautiful website design. If you love the PSP, you
     will enjoy his blog.
   <a href="https://nick64.me"><img src="/assets/buttons/nick64.gif" alt="nick64.me"></a>
@@ -327,7 +327,7 @@ permalink: /contact
   </tbody>
 </table>
 
-<p>I've had this laptop for 2 years, and will definitely last me through college at least. Extremely powerful, perfect                                                                        
+<p>I've had this laptop for 2 years, and will definitely last me through college at least. Extremely powerful, perfect                                                                                 
     for gaming or rendering video. I don't like the average gaming laptop, but this thing isn't flashy at all. I love
     laptops in general though - it's fun to put my favorite stickers on the lid :))</p>
 
@@ -388,9 +388,9 @@ permalink: /contact
           alt=""
           class="icon"></td>
       <td>
-        Dragonlet
+        unnamed
       </td>
-      <td>Google Pixel 6 Pro</td>
+      <td>Google Pixel 8</td>
     </tr>
     <tr>
       <td><img
@@ -442,25 +442,13 @@ permalink: /contact
     </tr>
     <tr>
       <td><img
-          src="/assets/silk/companion/png/16/smartphone.png"
-          width="16"
-          height="16"
-          alt=""
-          class="icon"></td>
-      <td>
-        Spotwing
-      </td>
-      <td>Kindle Fire HD 10 Gen 7</td>
-    </tr>
-    <tr>
-      <td><img
           src="/assets/silk/controller.png"
           width="16"
           height="16"
           alt=""
           class="icon"></td>
       <td>
-        Whitetail
+        unnamed
       </td>
       <td>Nintendo Wii</td>
     </tr>
@@ -472,7 +460,7 @@ permalink: /contact
           alt=""
           class="icon"></td>
       <td>
-        Saddlebag
+        unnamed
       </td>
       <td>Nintendo Wii U, black</td>
     </tr>
@@ -484,7 +472,7 @@ permalink: /contact
           alt=""
           class="icon"></td>
       <td>
-        Jewelwing
+        unnamed
       </td>
       <td>New Nintendo 3DS XL, Galaxy Style</td>
     </tr>
@@ -499,30 +487,6 @@ permalink: /contact
         <i>N/A</i>
       </td>
       <td>Game Boy Color</td>
-    </tr>
-    <tr>
-      <td><img
-          src="/assets/silk/phone.png"
-          width="16"
-          height="16"
-          alt=""
-          class="icon"></td>
-      <td>
-        <i>unnamed</i>
-      </td>
-      <td>Nokia 2780</td>
-    </tr>
-    <tr>
-      <td><img
-          src="/assets/silk/ipod.png"
-          width="16"
-          height="16"
-          alt=""
-          class="icon"></td>
-      <td>
-        <i>unnamed</i>
-      </td>
-      <td>iPod Nano Gen 5, purple</td>
     </tr>
     <tr>
       <td><img
@@ -556,7 +520,7 @@ permalink: /contact
           alt=""
           class="icon"></td>
       <td>
-        <i>unnamed</i>
+        <i>Whitetail</i>
       </td>
       <td>Samsung Chromebook 4</td>
     </tr>
@@ -574,35 +538,20 @@ permalink: /contact
     </tr>
   </tbody>
 </table>
-<p>I own a lot of random hardware. Some of it formerly belonged to my parents or older siblings, and some of it I've                                                                        
-    worked very hard to pursue and get (CRT and Dreamcast), but all of it was gathered over the course of years. The
-    hardware spans from the 2020s to the late 90s, but I manage to find a use for everything.</p>
-
 <p>Some notes:</p>
-
 <ul>
-  <li>The Aurora R7 has Debian installed and is acting as a home server, I host Minecraft Better Than Adventure on it                                                                        
+  <li>The Aurora R7 has Debian installed and is acting as a home server, I host Minecraft Better Than Adventure on it                                                                                 
         for me and my friends :DD</li>
   <li>The iPod Mini was upgraded with a new battery and a SD card slot, I also installed the
-    <a href="rockbox.org">Rockbox custom firmware</a>. I put in a 32GB SD as that's all I had, but I could expand it                                                                        
+    <a href="rockbox.org">Rockbox custom firmware</a>. I put in a 32GB SD as that's all I had, but I could expand it                                                                                 
         in the future. I love iPods so much!!! I used to use it as a daily driver for a month or 2 when I first got it.
   </li>
   <li>
     <a href="/dailynote/kindle-jailbreak.html">The Kindle e-reader is jailbroken with KOReader installed.</a>
   </li>
   <li>The DSi is my favorite handheld console in terms of design. Good games, too.</li>
-  <li>The Dreamcast was lended to me by Nick64, god bless this man. I replaced the failing disc drive with a GD-EMU,                                                                        
+  <li>The Dreamcast was lended to me by Nick64, god bless this man. I replaced the failing disc drive with a GD-EMU,                                                                                 
         which can load games from an SD card.</li>
-  <li>The Kindle Fire tablet has LineageOS installed, but I'm not exactly sure what to do with it right now.</li>
-  <li>I don't really like the 3DS... it feels too cheap and plastic-y compared to the sleek matte of the DSi line.
-  </li>
-  <li>The Oneplus 6T is being lended to my friend for use with
-    <a href="https://www.kali.org/docs/nethunter/">Kali NetHunter</a>
-    hacking tools >:)
-  </li>
-  <li>The iPod Nano is my favorite iPod design - it looks beautiful, sleek, and is the peak of "Y2K aesthetics" for                                                                        
-        me. But it's a FIRE HAZARD, the battery is literally bulging and pressing the screen out. So I just have it on a
+  <li>The iPod Nano is my favorite iPod design - it looks beautiful, sleek, and is the peak of Y2K aesthetics in my opinion. But it's a FIRE HAZARD, the battery is literally bulging and pressing the screen out. So I just have it on a      
         shelf, sadly going unused. :(</li>
-  <li>The CRT was like $60 but it looks pretty cool and great for playing Dreamcast so it was worth the price for me                                                                        
-        :) hard to find CRTs around here...</li>
 </ul>
